@@ -2,6 +2,10 @@ Version 2.4.0 - The river knows.
 ----------
 201?-??-??
 
+	gaffatape:
+		* Workaround for bug in wxWidgets causing aMule to crash on
+		  closing the last search tab
+
 	GonoszTopi:
 		* Fix restoring toolbar orientation on 'Cancel'
 		* Features ported from eMule:
